<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ub_lincoln_sensor_common_launch</name>
  <version>0.0.1</version>
  <description>The ub_lincoln_sensor_common_launch package</description>
  <maintainer email="cse-cavas@buffalo.edu">UB CSE CAVAS</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_velodyne_monitor</exec_depend>
  <exec_depend>nebula_sensor_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
